Jan 3, 2025 This is the second commit

--- a/english.html
+++ b/english.html
@@ -31,7 +31,7 @@
 			<em>Data used by third parties</em><br>
 			The application Sudoku Gio makes use of advertisement banners through the
 			Google AdMob Advertising service which can collect in anonymous form data
-			relative to the user interests also through cookies or similar technologies.
+			relative to the user interests by means of a device code ID.
 			Sudoku Gio uses advertisement banners to fund the app development costs
 			and to maintain its efficiency a long time. AdMob complies with
 			<a href='https://www.google.com/intl/en/policies/privacy/'>Google Privacy
@@ -49,10 +49,6 @@
 		    	to review periodically this policy to acknowledge the new terms
 		    </p>
     	</div>
-
-	<p class="privacy">
-		<a id="close" href="javascript:window.open('','_self').close();">Close</a>
-	</p>
 
   </body>
 </html>
