--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		    	<em>Dati utilizzati da terze parti</em><br>
 		    	L'applicazione Sudoku Gio mostra banner pubblicitari mediante il servizio reso
 		    	da Google AdMob Advertising che può raccogliere in maniera anonima dati relativi
-		    	agli interessi degli utenti anche attraverso l'utilizzo di cookies o simili
-		    	tecnologie. Sudoku utilizza il banner pubblicitario per finanziare i costi
+		    	agli interessi degli utenti attraverso l'utilizzo di un codice ID del device.
+				Sudoku utilizza il banner pubblicitario per finanziare i costi
 		    	di sviluppo dell'applicazione e per mantenerne l'efficienza nel tempo.
 		    	AdMob si attiene alle policies
 		    	<a href='https://www.google.com/intl/en/policies/privacy/'>Google Privacy
@@ -52,11 +52,6 @@
 		    	eventuali modifiche. 
 		    </p>
     	</div>
-
-	<p class="privacy">
-		<a id="close" href="javascript:window.close('','_parent','');">Chiudi</a>
-<!--		<a id="close" href="javascript:top.close();">Chiudi</a>-->
-	</p>
 
   </body>
 </html>
